--- a/css/styles.css
+++ b/css/styles.css
@@ -1,109 +1,131 @@
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat";
   text-align: center;
 }
 
-h1,h2,h3,h4,h5,h6{
-  font-family: 'Montserrat', sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat";
 }
 
 p {
-  color: #afafaf;
+  color: #8f8f8f;
 }
-/* heading */
-.big-heading{
-  font-family: 'Montserrat', sans-serif;
+
+/* Headings */
+.big-heading {
+  font-family: "Montserrat";
   font-weight: 900;
   font-size: 3.5rem;
   line-height: 1.5;
 }
-.section-heading{
-  font-weight: 700;
-  font-size: 3rem;
-  height: 1.5;
-}
-/* conntainers */
-.container-fluid {
-  padding: 7% 15% ;
-}
-/* section */
-.colored-section{
-  background-color: #ff4c68;
-  color: #fff;
-}
-.white-section{
-  background-color: #fff;
-}
 
-/* Navbar */
-/* padding problem arises for aligning text changing padding bottom to padding shown below */
-.navbar {
-  padding: 0 0 4.5rem;
-}
-/* for tindog left hand side */
-.navbar-brand {
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 2.5rem;
-  font-weight: bold;
-}
-/* gap between ul lists */
-.nav-item {
-  padding: 0 18px;
-}
-/* changing the 3 texts fonts */
-.nav-link {
-  font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: lighter;
-}
-/* Title-section */
-#title .container-fluid{
-  padding: 3% 15% 7%;
-  text-align: left;
-}
-/* extra button for margin between two download buttons*/
-.download-button {
-  margin: 5% 3% 5% 0;
-}
-.title-image {
-  margin-left: 220%;
-  width: 1050%;
-  transform: rotate(25deg);
-  position: absolute;
-}
-/* feature section */
-#features {
-  position: relative;
-  /*z-index: 1; not required here*/
-}
-.feature-title{
-  font-weight: 700;
-  font-size: 1.5rem;
-}
-.feature-box {
-  padding: 5%;
-}
-.icon {
-  color: #ef8172;
-  margin-bottom: 1rem;
-}
-.icon:hover {
-  color: #ff4c68;
-}
-/* Testimonial */
-#testimonials {
-  background-color: #ef8172;
-}
-.testimonial-text{
+.section-heading {
   font-weight: 700;
   font-size: 3rem;
   line-height: 1.5;
 }
+
+/* Containers */
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* Sections */
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.white-section {
+  background-color: #fff;
+}
+
+/* Navigation Bar */
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat";
+  font-weight: lighter;
+}
+
+/* Buttons */
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Section */
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/* Title Image */
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}
+
+/* Features Section */
+#features {
+  position: relative;
+}
+
+.feature-title {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.feature-box {
+  padding: 5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+/* Testimonial Section */
+#testimonials {
+  background-color: #ef8172;
+}
+
+.testimonial-text {
+  font-family: "Montserrat";
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 .testimonial-image {
   width: 10%;
-  border-radius: 200%;
+  border-radius: 100%;
   margin: 20px;
 }
+
 #press {
   background-color: #ef8172;
   padding-bottom: 3%;
@@ -113,32 +135,34 @@ p {
   width: 15%;
   margin: 20px 20px 50px;
 }
-/* pricing */
-.price-text{
-  font-weight: 700;
-  font-size: 3rem;
-  height: 1.5;
-}
+
+/* Pricing Section */
 #pricing {
   padding: 100px;
 }
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 .pricing-col {
   padding: 3% 2%;
 }
-/* for photo of dog in mobile */
-@media  (max-width: 992px) {
-  .title-image{
-    margin-left: auto;
-    width: 102%;
+
+/* CTA Section */
+/* Footer Section */
+.foot {
+  margin: 20px 10px;
+}
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
     position: static;
     transform: rotate(0);
   }
-  #title{
-    text-align: center;
-  }
-}
-/* call-to-action */
-/* footer */
-.foot{
-  margin: 20px 10px;
 }
